--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -23,10 +23,10 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Installing Node
-        uses: actions/setup-node@v2-beta
-        with: 
-          node-version: 18.14.2  
+      - name: Installing Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '18.14.2' 
 
        # Runs a set of commands using the runners shell
       - name: Installing surge
