--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Installing Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18.14.2' 
+          node-version: 18.14.2 
 
        # Runs a set of commands using the runners shell
       - name: Installing surge
