--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -20,13 +20,13 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2-beta
 
       # Runs a single command using the runners shell
-      - name: Installing Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 18.14.2 
+      - name: Installing Node
+        uses: actions/setup-node@v2-beta
+        with: 
+          node-version: 18.14.2
 
        # Runs a set of commands using the runners shell
       - name: Installing surge
