--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -32,4 +32,4 @@ jobs:
       - name: Installing surge
         run:  npm install --global surge
       - name: deploying using surge
-        run: surge ./ https://famous-quotes-api.surge.sh/ --token ${{ secrets.SURGE_TOKEN }}
+        run: surge ./ https://famous-quotes-api.surge.sh --token ${{ secrets.SURGE_TOKEN }}
